force-app/main/default/objects/NPS_Casa_Pellas__c/NPS_Casa_Pellas__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar notas de NPS en cases</description>
    <label>NPS Casa Pellas</label>
    <nameField>
        <label>NPS Casa Pellas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Casa Pellas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>