force-app/main/default/objects/NPS_Casa_Pellas__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <description>Este campo obtiene la categoria por medio de la nota que da el cliente</description>
    <formula>IF  (AND(Nota_NPS__c&gt;=7, Nota_NPS__c&lt;=8), &apos;PASIVO&apos;,
IF (Nota_NPS__c&lt;=6, &apos;DETRACTOR&apos;, &apos;PROMOTOR&apos;))</formula>
    <inlineHelpText>Campo se calcula solo al llenar nota NPS</inlineHelpText>
    <label>Categoria</label>
    <type>Text</type>
</CustomField>