force-app/main/default/objects/NPS_Casa_Pellas__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <description>Para almacenar el comentario del cliente</description>
    <label>Comentarios</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>