force-app/main/default/objects/NPS_Casa_Pellas__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPS Casa Pellas</relationshipLabel>
    <relationshipName>NPS_Casa_Pellas</relationshipName>
    <type>Lookup</type>
</CustomField>