force-app/main/default/objects/NPS_Casa_Pellas__c/fields/Nota_NPS__c.field-meta.xml
<CustomField>
    <fullName>Nota_NPS__c</fullName>
    <description>Obtiene la nota de NPS llenada por el cliente</description>
    <label>Nota NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>