force-app/main/default/objects/NPS_Casa_Pellas__c/fields/Numero_de_caso__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Para almacenar el llink entre el caso y el objeto</description>
    <label>Numero de Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>NPS Casa Pellas</relationshipLabel>
    <relationshipName>NPS_Casa_Pellas</relationshipName>
    <type>Lookup</type>
</CustomField>