force-app/main/default/objects/NPS_Casa_Pellas__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NPS Casa Pellas</relationshipLabel>
    <relationshipName>NPS_Casa_Pellas</relationshipName>
    <type>Lookup</type>
</CustomField>