force-app/main/default/objects/NPS_Casa_Pellas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Nota_NPS__c</columns>
    <columns>Categoria__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Oportunidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>